--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,11 +12,19 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Install Dependencies
-        run: apt update && apt install -y python3.11 python3-pip && python3.11 -m pip install --upgrade pip && pip install -r requirements.txt
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
       - name: Test
-        run: pytest tests.py --cov=./ && coverage html
+        run: |
+          pytest tests.py --cov=./
+          coverage html
 
       - name: Archive code coverage results
         uses: actions/upload-artifact@v4
